# openg2p-pbms-community-addons

./: .pre-commit-config.yaml  Jenkinsfile_openg2p-pbms-community-addons  NOTICE  README.md  pyproject.toml  requirements.txt
extendable/: README.rst  __manifest__.py
extendable/models/: extendable_registry_loader.py
extendable/static/description/: index.html
extendable_fastapi/: README.rst  __manifest__.py  schemas.py
extendable_fastapi/static/description/: index.html
extendable_fastapi/tests/: schemas.py  test_strict_extendable_base_model.py
fastapi/: README.rst  __manifest__.py  fastapi_dispatcher.py
fastapi/models/: fastapi_endpoint.py  ir_rule.py
fastapi/readme/: HISTORY.md
fastapi/static/description/: index.html
graphql_base/: __manifest__.py
graphql_base/readme/: USAGE.md
graphql_base/static/description/: index.html
graphql_demo/: __manifest__.py
graphql_demo/static/description/: index.html
smile_audit/: __manifest__.py
smile_audit/models/: audit_rule.py
smile_audit/tools/: decorator.py
smile_audit/views/: audit_rule_view.xml
